# fluxgate

./: .gitignore  Info.md  README.md  docker-compose.yml  init.sql
control-plane/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
control-plane/src/: __init__.py  config.py  guard.py  storage.py
frontend/: Dockerfile  README.md  index.html  nginx.conf
gateway/: .dockerignore  Cargo.toml  Dockerfile  README.md
gateway/src/: admin.rs  auth.rs  doh.rs  index.html  main.rs  portal_auth.rs  proxy.rs  rate_limiter.rs
gateway/src/doh/: local.rs  mod.rs  upstream.rs
gateway/src/infrastructure/: cache.rs  database.rs  mod.rs
