[project]
name = "control-plane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "redis>=8.0.0",
    "sse-starlette>=3.4.4",
    "starlette>=1.3.1",
    "uvicorn>=0.49.0",
]
