[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxgate-control-plane"
version = "0.1.0"
description = "MCP-based Control Plane and SOC Agent for the Fluxgate API Gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Suriya Sureshkumar", email = "suriyasureshkumarkannian@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "redis>=5.0.1",
    "uvicorn>=0.30.1",
    "starlette>=0.37.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
ignore_missing_imports = true